--- a/week03_04022026/budget-tracker.html
+++ b/week03_04022026/budget-tracker.html
@@ -6,10 +6,14 @@
     <title>Budget Tracker</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="budget-tracker.css">
     <style>
       /* Small helper to reintroduce jumbotron-style for Bootstrap 5 */
       .jumbotron { background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%); }
+      /* Keep custom card spacing within the summary */
+      .summary .card { border: none; box-shadow: 0 6px 18px rgba(0,0,0,0.05); }
     </style>
 </head>
 <body>
@@ -26,6 +30,9 @@
             <li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
           </ul>
+          <div class="d-flex ms-3">
+            <a class="btn btn-outline-light" href="#add-expense"><i class="bi bi-plus-circle me-1"></i>Add Expense</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -53,27 +60,36 @@
         <!-- Summary Section -->
         <section class="summary row g-3">
             <div class="summary-item income col-md-4">
-                <div class="p-3 rounded-3 text-center">
-                    <h3>Income</h3>
-                    <p class="amount">$5,000</p>
+                <div class="card text-center">
+                  <div class="card-body">
+                    <i class="bi bi-wallet2 fs-1 text-success"></i>
+                    <h3 class="card-title mt-2">Income</h3>
+                    <p class="amount h4">$5,000</p>
+                  </div>
                 </div>
             </div>
             <div class="summary-item expense col-md-4">
-                <div class="p-3 rounded-3 text-center">
-                    <h3>Expenses</h3>
-                    <p class="amount">$1,200</p>
+                <div class="card text-center">
+                  <div class="card-body">
+                    <i class="bi bi-credit-card-2-back fs-1 text-danger"></i>
+                    <h3 class="card-title mt-2">Expenses</h3>
+                    <p class="amount h4">$1,200</p>
+                  </div>
                 </div>
             </div>
             <div class="summary-item balance col-md-4">
-                <div class="p-3 rounded-3 text-center">
-                    <h3>Balance</h3>
-                    <p class="amount">$3,800</p>
+                <div class="card text-center">
+                  <div class="card-body">
+                    <i class="bi bi-piggy-bank fs-1 text-primary"></i>
+                    <h3 class="card-title mt-2">Balance</h3>
+                    <p class="amount h4">$3,800</p>
+                  </div>
                 </div>
             </div>
         </section>
 
         <!-- Add Expense Form -->
-        <section class="form-section">
+        <section class="form-section" id="add-expense">
             <h2>Add New Expense</h2>
             <form class="expense-form row g-3">
                 <div class="form-group col-md-6">
@@ -113,28 +129,28 @@
         <!-- Categories List -->
         <section class="categories-section">
             <h2>Expense Categories</h2>
-            <ul class="category-list">
-                <li class="category-item food">
-                    <span class="category-name">Food & Dining</span>
-                    <span class="category-amount">$250</span>
-                </li>
-                <li class="category-item transport">
-                    <span class="category-name">Transport</span>
-                    <span class="category-amount">$150</span>
-                </li>
-                <li class="category-item utilities">
-                    <span class="category-name">Utilities</span>
-                    <span class="category-amount">$400</span>
-                </li>
-                <li class="category-item entertainment">
-                    <span class="category-name">Entertainment</span>
-                    <span class="category-amount">$200</span>
-                </li>
-                <li class="category-item shopping">
-                    <span class="category-name">Shopping</span>
-                    <span class="category-amount">$200</span>
-                </li>
-            </ul>
+            <div class="list-group">
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><strong>Food & Dining</strong></div>
+                    <span class="badge bg-danger rounded-pill">$250</span>
+                </div>
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><strong>Transport</strong></div>
+                    <span class="badge bg-info text-dark rounded-pill">$150</span>
+                </div>
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><strong>Utilities</strong></div>
+                    <span class="badge bg-warning text-dark rounded-pill">$400</span>
+                </div>
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><strong>Entertainment</strong></div>
+                    <span class="badge bg-success rounded-pill">$200</span>
+                </div>
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><strong>Shopping</strong></div>
+                    <span class="badge bg-secondary rounded-pill">$200</span>
+                </div>
+            </div>
         </section>
 
         <!-- Recent Expenses Table -->
@@ -153,38 +169,38 @@
                 <tbody>
                     <tr>
                         <td>2026-01-28</td>
-                        <td><span class="badge food">Food</span></td>
+                        <td><span class="badge bg-danger">Food</span></td>
                         <td>Coffee & Lunch</td>
                         <td>$25.50</td>
-                        <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                        <td><button class="btn btn-danger btn-sm btn-delete">Delete</button></td>
                     </tr>
                     <tr>
                         <td>2026-01-27</td>
-                        <td><span class="badge transport">Transport</span></td>
+                        <td><span class="badge bg-info text-dark">Transport</span></td>
                         <td>Gas Fill-up</td>
                         <td>$45.00</td>
-                        <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                        <td><button class="btn btn-danger btn-sm btn-delete">Delete</button></td>
                     </tr>
                     <tr>
                         <td>2026-01-26</td>
-                        <td><span class="badge utilities">Utilities</span></td>
+                        <td><span class="badge bg-warning text-dark">Utilities</span></td>
                         <td>Electricity Bill</td>
                         <td>$120.00</td>
-                        <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                        <td><button class="btn btn-danger btn-sm btn-delete">Delete</button></td>
                     </tr>
                     <tr>
                         <td>2026-01-25</td>
-                        <td><span class="badge entertainment">Entertainment</span></td>
+                        <td><span class="badge bg-success">Entertainment</span></td>
                         <td>Movie Tickets</td>
                         <td>$30.00</td>
-                        <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                        <td><button class="btn btn-danger btn-sm btn-delete">Delete</button></td>
                     </tr>
                     <tr>
                         <td>2026-01-24</td>
-                        <td><span class="badge shopping">Shopping</span></td>
+                        <td><span class="badge bg-secondary">Shopping</span></td>
                         <td>Grocery Store</td>
                         <td>$85.50</td>
-                        <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                        <td><button class="btn btn-danger btn-sm btn-delete">Delete</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -196,7 +212,89 @@
         </footer>
     </div>
 
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="confirmDeleteLabel">Confirm Delete</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">Are you sure you want to delete this expense?</div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" id="confirmDeleteBtn" class="btn btn-danger">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        // Delete flow
+        var deleteRow = null;
+        var confirmModalEl = document.getElementById('confirmDeleteModal');
+        var confirmModal = new bootstrap.Modal(confirmModalEl);
+
+        document.body.addEventListener('click', function (e) {
+          if (e.target.matches('.btn-delete')) {
+            deleteRow = e.target.closest('tr');
+            confirmModal.show();
+          }
+        });
+
+        document.getElementById('confirmDeleteBtn').addEventListener('click', function () {
+          if (deleteRow) {
+            deleteRow.remove();
+            deleteRow = null;
+          }
+          confirmModal.hide();
+        });
+
+        // Form handling with validation and dynamic row add
+        var form = document.querySelector('.expense-form');
+        form.addEventListener('submit', function (e) {
+          e.preventDefault();
+          if (!form.checkValidity()) {
+            form.classList.add('was-validated');
+            return;
+          }
+
+          var category = document.getElementById('category').value;
+          var amount = parseFloat(document.getElementById('amount').value).toFixed(2);
+          var desc = document.getElementById('description').value || '';
+          var date = document.getElementById('date').value;
+
+          var badgeMap = {
+            food: 'bg-danger',
+            transport: 'bg-info text-dark',
+            utilities: 'bg-warning text-dark',
+            entertainment: 'bg-success',
+            shopping: 'bg-secondary',
+            other: 'bg-dark'
+          };
+          var badgeClass = badgeMap[category] || 'bg-secondary';
+          var displayCategory = category.charAt(0).toUpperCase() + category.slice(1);
+
+          var tbody = document.querySelector('.expense-table tbody');
+          var tr = document.createElement('tr');
+          tr.innerHTML = '<td>' + date + '</td>' +
+                         '<td><span class="badge ' + badgeClass + '">' + displayCategory + '</span></td>' +
+                         '<td>' + (desc || '-') + '</td>' +
+                         '<td>$' + amount + '</td>' +
+                         '<td><button class="btn btn-danger btn-sm btn-delete">Delete</button></td>';
+
+          tbody.prepend(tr);
+          form.reset();
+          form.classList.remove('was-validated');
+
+          // Bring the newly added row into view
+          tr.scrollIntoView({ behavior: 'smooth' });
+        });
+      });
+    </script>
 </body>
 </html>
